# build-qtconnectivity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
